<?xml version="1.0"?>
<package format="3">
  <name>astra_camera</name>
  <version>0.3.0</version>
  <description>Drivers for Orbbec Astra Devices. </description>
  <author email="liuhua@orbbec.com">Tim Liu</author>
  <license>Apache License 2.0</license>
  <maintainer email="nan@orbbec3d.com">Orbbec3D</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>git</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend condition="$ROS_DISTRO != noetic">libuvc</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">libuvc-dev</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/astra_nodelets.xml"/>
  </export>
</package>
